--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "cSpell.words": ["Vitesse"],
+  "cSpell.words": [
+    "Vitesse"
+  ],
   "prettier.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib",
   "editor.codeActionsOnSave": {
@@ -8,4 +10,6 @@
   "files.associations": {
     "*.css": "postcss",
   },
+  "eslint.format.enable": true,
+  "editor.formatOnSave": true,
 }
