--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.16.0",
     "@iconify-json/carbon": "^1.0.13",
+    "@testing-library/vue": "^6.4.2",
     "@types/node": "^17.0.8",
     "@unocss/reset": "^0.22.2",
     "@vitejs/plugin-vue": "^2.0.1",
