--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^7.5.3",
+    "pinia": "^2.0.11",
     "vue": "^3.2.26",
     "vue-router": "^4.0.12"
   },
